# stm32_drone

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
