[package]
name = "stm32_drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.2.0", path = "deps/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path ="deps/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.1.0", path = "deps/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "deps/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "unstable-pac", "memory-x", "stm32f401re", "time-driver-tim3", "exti","embedded-sdmmc", "chrono"]  }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "1.1", features = ["nightly"]}
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2

[[bin]]
name = "setup_bin"
path = "src/bin/setup_bin.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test_motor"
path = "src/bin/test_motor.rs"

